--- a/packages/components/src/styles/core/_resets.css
+++ b/packages/components/src/styles/core/_resets.css
@@ -1,62 +1,68 @@
 .reset-anchor {
-  color: inherit;
-  text-decoration: none;
+    color: inherit;
+    text-decoration: none;
 }
 
 .reset-button {
-  outline: none;
-  border: none;
-  padding: 0;
-  text-decoration: none;
-  cursor: pointer;
-  background: none;
+    outline: none;
+    border: none;
+    padding: 0;
+    text-decoration: none;
+    cursor: pointer;
+    background: none;
 }
 
 .reset-list {
-  margin: 0;
-  padding: 0;
-  list-style: none;
+    margin: 0;
+    padding: 0;
+    list-style: none;
 }
 
 .reset-heading {
-  margin: 0;
-  font-weight: normal;
+    margin: 0;
+    font-weight: normal;
 }
 
 .reset-paragraph {
-  margin: 0;
+    margin: 0;
 }
 
+.swagger-ui input[type=email].reset-input,
+.swagger-ui input[type=file].reset-input,
+.swagger-ui input[type=password].reset-input,
+.swagger-ui input[type=search].reset-input,
+.swagger-ui input[type=text].reset-input,
+.swagger-ui textarea.reset-input,
 .reset-input {
-  appearance: none;
-  box-shadow: none;
-  outline: none;
-  border: none;
-  border-radius: 0;
-  padding: 0;
-  background: none;
+    appearance: none;
+    box-shadow: none;
+    outline: none;
+    border: none;
+    border-radius: 0;
+    padding: 0;
+    background: none;
 }
 
 .reset-input::-ms-clear {
-  display: none;
-  width: 0;
-  height: 0;
+    display: none;
+    width: 0;
+    height: 0;
 }
 
 .reset-input-number {
-  -moz-appearance: textfield;
+    -moz-appearance: textfield;
 }
 
 .reset-input-number::-webkit-inner-spin-button,
 .reset-input-number::-webkit-outer-spin-button {
-  appearance: none;
+    appearance: none;
 }
 
 .reset-select::-ms-expand {
-  display: none;
+    display: none;
 }
 
 abbr,
 abbr[title] {
-  text-decoration: none;
+    text-decoration: none;
 }
