--- a/packages/plugins/src/styles/swagger/_authorize.scss
+++ b/packages/plugins/src/styles/swagger/_authorize.scss
@@ -16,6 +16,12 @@
   flex: 1;
   justify-content: flex-end;
 
+  button {
+    margin-right: 10px;
+  }
+  button:last-child {
+    margin-right: 0;
+  }
   .authorize {
     padding-right: 20px;
   }
