--- a/packages/plugins/src/styles/swagger/_layout.scss
+++ b/packages/plugins/src/styles/swagger/_layout.scss
@@ -487,6 +487,10 @@
 
     @include text_body();
   }
+
+  .curl {
+    white-space: normal;
+  }
 }
 
 .response-col_status {
@@ -542,10 +546,6 @@
   overflow-wrap: break-word;
   @include text_code($opblock-body-font-color);
 
-  span {
-    color: $opblock-body-font-color !important;
-  }
-
   .headerline {
     display: block;
   }
@@ -559,6 +559,21 @@
     max-height: 400px;
     min-height: 6em;
   }
+
+  .download-contents {
+    display: none;
+  }
+}
+.fullscreen > .highlight-code {
+  height: 100%;
+}
+.fullscreen > .highlight-code > .microlight {
+  max-height: 100%;
+  height: 100%;
+}
+
+.curl-command {
+  position: relative;
 }
 
 .download-contents {
@@ -707,6 +722,30 @@
   }
 }
 
+.hidden {
+  display: none;
+}
+
+.no-margin {
+  height: auto;
+  border: none;
+  margin: 0;
+  padding: 0;
+}
+
+.float-right {
+  float: right;
+}
+
+img.full-width {
+  width: 100%;
+}
+
+.svg-assets {
+  position: absolute;
+  width: 0;
+  height: 0;
+}
 
 section {
   h3 {
@@ -725,6 +764,11 @@ a.nostyle {
     color: inherit;
     cursor: pointer;
   }
+}
+
+.fallback {
+  padding: 1em;
+  color: #aaa;
 }
 
 .version-pragma {
@@ -751,5 +795,24 @@ a.nostyle {
       padding: 4px 4px 2px;
       white-space: pre;
     }
+  }
+}
+
+.opblock-link {
+  font-weight: normal;
+
+  &.shown {
+    font-weight: bold;
+  }
+}
+
+span {
+  &.token-string {
+    color: #555;
+  }
+
+  &.token-not-formatted {
+    color: #555;
+    font-weight: bold;
   }
 }
