--- a/packages/swagger-ui/src/index.css
+++ b/packages/swagger-ui/src/index.css
@@ -32,6 +32,7 @@ body .swagger-ui .renderedMarkdown pre {
   font-family: monospace;
   font-weight: 600;
   color: #fff;
+  overflow: scroll;
 }
 
 body .swagger-ui .markdown pre code,
