feat(swagger): implement api banner

--- a/packages/swagger-ui-v3/src/index.css
+++ b/packages/swagger-ui-v3/src/index.css
@@ -1,13 +1,49 @@
+
+/* swagger customization */
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  @apply font-sans;
+}
+.loading-container .loading {
+  display: none;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.scheme-container.scheme-container {
+  background: transparent;
+  box-shadow: none;
+}
+
+/* swagger tags title */
+body .swagger-ui .opblock-tag {
+  @apply text-h5 flex font-serif transition-colors duration-300 md:text-h2 justify-between gap-x-20 p-20 md:px-0 md:pb-0 md:pt-40 md:text-black md:text-black;
+  @apply border-0 bg-transparent;
+}
+body .swagger-ui .opblock-tag:hover {
+  @apply bg-transparent;
+}
+
+body .swagger-ui .operation-tag-content {
+  @apply space-y-40 py-40 md:pt-32;
+}
+body .swagger-ui .info h1,
+body .swagger-ui .info h2,
+body .swagger-ui .info h3,
+body .swagger-ui .info h4,
+body .swagger-ui .info h5,
+body .swagger-ui .info .title {
+  @apply font-serif;
+}
+body .swagger-ui .info .title {
+  @apply text-ultramarine;
+}
+
+body .swagger-ui .info li, body .swagger-ui .info p, body .swagger-ui .info table {
+  @apply font-sans;
+}
+
+body .api-banner h1.title {
+  @apply text-h1 lg:text-h0 font-serif;
+}
+
+body [for='schemes'] {
+  @apply flex flex-col md:flex-row md:items-center md:justify-between;
 }
