--- a/packages/ui/styles/globals.css
+++ b/packages/ui/styles/globals.css
@@ -37,6 +37,18 @@
     --color-green: 131deg 89% 29%;
     --color-red: 9deg 79% 42%;
     --color-orange: 25deg 100% 39%;
+
+    /* operation */
+    /*
+    $_color-post: #49cc90 !default;
+$_color-get: #61affe !default;
+$_color-put: #fca130 !default;
+$_color-delete: #f93e3e !default;
+$_color-head: #9012fe !default;
+$_color-patch: #50e3c2 !default;
+$_color-disabled: #ebebeb !default;
+$_color-options: #0d5aa7 !default;
+     */
   }
 }
 
