--- a/packages/ui/molecules/Forms/Select/Select.css
+++ b/packages/ui/molecules/Forms/Select/Select.css
@@ -19,7 +19,8 @@
   @apply flex items-center;
 }
 
-.is-open .choices__list--dropdown, .is-open .choices__list[aria-expanded] {
+.is-open .choices__list--dropdown,
+.is-open .choices__list[aria-expanded] {
   @apply border-lightGrey shadow-xl;
 }
 
@@ -30,6 +31,7 @@
   border-radius: 0;
 }
 
-.choices__list--dropdown, .choices__list[aria-expanded] {
- @apply border-lightGrey shadow-xl rounded-4 mt-8;
+.choices__list--dropdown,
+.choices__list[aria-expanded] {
+  @apply border-lightGrey shadow-xl rounded-4 mt-8;
 }
