fix(swagger-ui-v3): fix minors issues related to trident ui migration

--- a/packages/ui/molecules/Forms/Select/Select.css
+++ b/packages/ui/molecules/Forms/Select/Select.css
@@ -21,7 +21,7 @@
 
 .is-open .choices__list--dropdown,
 .is-open .choices__list[aria-expanded] {
-  @apply border-lightGrey shadow-xl;
+  @apply border-lightGrey shadow-xl z-5;
 }
 
 .choices[data-type*="select-one"] .choices__input {
