--- a/packages/ui/molecules/Forms/Select/Select.css
+++ b/packages/ui/molecules/Forms/Select/Select.css
@@ -1,6 +1,6 @@
 @import "choices.js/public/assets/styles/choices.css";
 
-.dropdown-container {
+.dropdown-container:not(.w-full) {
   max-width: 340px;
 }
 
