--- a/packages/swagger-ui-v3/src/index.css
+++ b/packages/swagger-ui-v3/src/index.css
@@ -3,5 +3,6 @@
 @import "./styles/tags.css";
 @import "./styles/operation.css";
 @import "./styles/form.css";
+@import "./styles/auth.css";
 @import "./styles/button.css";
 @import "./styles/markdown.css";
