--- a/packages/ui/molecules/Forms/Select/Select.css
+++ b/packages/ui/molecules/Forms/Select/Select.css
@@ -58,9 +58,8 @@
     padding: 0;
     background-size: 8px;
     position: absolute;
-    top: 50%;
+    bottom: 19px;
     right: 0;
-    margin-top: -10px;
     margin-right: 25px;
     height: 20px;
     width: 20px;
@@ -95,8 +94,7 @@
     border-width: 5px;
     position: absolute;
     right: 11.5px;
-    top: 50%;
-    margin-top: -2.5px;
+    bottom: 21px;
     pointer-events: none;
   }
 
