fix(swagger-ui-plugins): search field can search term in route description

--- a/packages/swagger-ui-plugins/styles/operation.css
+++ b/packages/swagger-ui-plugins/styles/operation.css
@@ -218,9 +218,7 @@ body {
     @apply pb-12;
   }
 
-  .swagger-ui .opblock-description {
-    .text-xxs {
-      @apply flex items-center justify-center text-b6 py-4 px-8 mx-4 rounded-16 bg-wave;
-    }
+  .swagger-ui .opblock-description .doc-tags div {
+    @apply flex items-center justify-center text-b6 py-4 px-8 mx-4 rounded-16 bg-wave;
   }
 }
