fix(swagger): replace loader by a small card loader animation

--- a/packages/swagger-ui-plugins/styles/index.css
+++ b/packages/swagger-ui-plugins/styles/index.css
@@ -2,6 +2,7 @@
 @import "./banner.css";
 @import "./tags.css";
 @import "./operation.css";
+@import "./operation-loading.css";
 @import "./form.css";
 @import "./auth.css";
 @import "./button.css";
