fix: update Popin component and adjust styles in various components for responsiveness

--- a/packages/swagger-ui-plugins/styles/index.css
+++ b/packages/swagger-ui-plugins/styles/index.css
@@ -8,3 +8,7 @@
 @import "./button.css";
 @import "./markdown.css";
 @import "./custom-block.css";
+
+.max-w-popin {
+  max-width: calc(100vw - 42px);
+}
