--- a/packages/swagger-ui-plugins/styles/form.css
+++ b/packages/swagger-ui-plugins/styles/form.css
@@ -15,6 +15,8 @@ body {
   .swagger-ui input[type="text"] {
     @apply text-b4 rounded-pill w-full border px-12 py-12 font-normal outline-none border-lightGrey bg-white text-black;
 
+    max-width: none;
+
     &:not([disabled]) {
       @apply focus:border-black active:border-black;
     }
