fix: update trident-ui to v1.3.0

--- a/packages/swagger-ui-plugins/styles/index.css
+++ b/packages/swagger-ui-plugins/styles/index.css
@@ -12,3 +12,13 @@
 .max-w-popin {
   max-width: calc(100vw - 42px);
 }
+
+.popin {
+  input[type="email"],
+  input[type="password"],
+  input[type="search"],
+  input[type="file"],
+  input[type="text"] {
+    max-width: none;
+  }
+}
