--- a/packages/swagger-ui-plugins/styles/button.css
+++ b/packages/swagger-ui-plugins/styles/button.css
@@ -1,3 +1,12 @@
+@tailwind components;
+
+@layer components {
+  .button-circle.button-xsmall {
+    @apply size-32;
+    @apply p-0;
+  }
+}
+
 body .swagger-ui .btn {
   @apply text-b5 rounded-pill font-sans shrink-0 font-semibold transition-colors duration-200 bg-saffron hover:bg-saffron-active active:bg-saffron-active border border-solid border-saffron hover:border-saffron-active active:border-saffron-active text-black disabled:bg-pearl disabled:text-grey disabled:border-pearl group-hover:bg-saffron-active group-hover:border-saffron-active h-auto py-12 px-20;
   transition: all 0.2s ease-in-out;
